--- a/templates/index.html
+++ b/templates/index.html
@@ -9,45 +9,76 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Mision to Mars</h1>
-      
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
     
-    <h2><strong>Latest Mars News</strong></h2>
-    <h4> {{ mars_info.news_title }}</h4>
-    <h5> {{ mars_info.news_text }}</h5>
-    <h2><strong>Featured Mars Image</strong></h2>  
-  <img src="{{ mars_info.img_link }}" alt="mars">
-   
-   <h2><strong>Current Weather on Mars</strong></h2> 
-   <h5> {{ mars_info.weather }}</h5>
-   <h2><strong>Mars Facts</strong></h2>
-       {{ mars_info.tabla | safe }}
-     
-   <h2><strong>Mars Hemispheres</strong></h2>  
-  
+
+    <!-- Latest Mars News -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="media">
+            <div class="media-body">
+            <h2><strong>Latest Mars News</strong></h2>
+            <h4 class="media-heading" style="color: black"><b> {{ mars_info.news_title }}</b></h4>
+            <h5 style="color: black"><p> {{ mars_info.news_text }}</p></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <!-- Featured Mars Image -->
+    <div class="row">
+      <div class="col-md-9">
+      <h2 style="color: black"><b>Featured Mars Image</strong></b></h2>
+      <img src="{{ mars_info.img_link }}" alt="mars">
+      </div>
+    <!-- Current weather -->
+      <div class="col-md-3">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="panel panel-default">
+              <div class="panel-body">
+              <h3 style="color: #000000"><b>Current Weather on Mars</b></h3>
+              <p style="color: #000000"> {{ mars_info.weather }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+          <!-- Mars Facts -->
+          <div class="row">
+          <h3 style="color: black">Mars Facts</strong></h3>
+            <div class="col-md-12" style="color: black">
+             {{ mars_info.tabla | safe }}
+             </div>
+          </div>
+        </div>
+      </div>
+
+
+ <!-- Mars Hemispheres -->
+ <div class="row" style="margin-top: 80px;">
+    <div class="page-header">
+    <h2 class="text-center" style="color: black"><b>Mars Hemispheres</b></h2>
+    </div>
+     {% for foto in mars_info.hem %}
+        <div class="col-md-6">
+          <div class="thumbnail">
+          <img class ="talla" src="{{foto.foto}}" alt="foto">
+            <div class="caption"><h3><b>{{foto.titulo}}</b></h3>
+            </div>
+          </div>
+        </div>
+
+       {% endfor %}
   </div>
-
-<div class="container-fluid">  
- <div class="row">
-         {% for foto in mars_info.hem %}
-         
-         <div class="col-sm-12 col-md-6">
-         <img class ="talla" src="{{foto.foto}}" alt="foto">
-         <div class="caption center-block"><strong>{{foto.titulo}}</strong></div> 
-         </div>
-        
-
-          {% endfor %}
-
-</div>
 </div>
 
 
